--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
-    "vue-loader": "^16.0.0-beta.4",
+    "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11"
   },
   "version": "0.1.0",
