--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "axios": "^0.19.2",
+    "bulma": "^0.9.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vue-turbolinks": "^2.1.0"
   },
   "version": "0.1.0",
   "devDependencies": {
